--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,14 @@
                                 <i class="bi bi-exclamation-triangle me-1"></i>Pendências
                             </a>
                         </li>
+                        {% if user.profile.role == 'admin' or 'nivel 2' %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'accounts:manage_users' %}">
+                                    <i class="bi bi-people me-1"></i>Usuários
+                                </a>
+                            </li>
+                        {% endif %}
+                    
                     {% if user.profile.role == 'admin' %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'obras:nova_obra' %}">
