--- a/templates/base.html
+++ b/templates/base.html
@@ -30,11 +30,14 @@
                                 <i class="bi bi-buildings me-1"></i>Obras
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'obras:visao_geral' %}">
-                                <i class="bi bi-bar-chart-line me-1"></i>Visão Geral
-                            </a>
-                        </li>
+                        {% if user.profile.role == 'admin' or user.profile.role == 'nivel2' %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'obras:visao_geral' %}">
+                                    <i class="bi bi-bar-chart-line me-1"></i>Visão Geral
+                                </a>
+                            </li>
+                        {% endif %}
+                        
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'obras:listar_pendencias' %}">
                                 <i class="bi bi-exclamation-triangle me-1"></i>Pendências
